fix wrap home

--- a/www/styles/less/home.less
+++ b/www/styles/less/home.less
@@ -101,4 +101,9 @@
     line-height: 40px;
     height: 60px;
   }
+
+  .home-best-recipe-text {
+    white-space: nowrap;
+    overflow: hidden;
+  }
 }
